[package]
name = "inkwell-studio"
version = "0.1.0"
description = "Inkwell Studio — a desktop-first writing application"
authors = ["Inkwell Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "inkwell_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Optimise binary size for distribution
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
